<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/linearLayoutS">
    <ImageView
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:background="@drawable/image_radius"/>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_of_the_movie"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_year"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="12sp"
            android:textStyle="italic"/>
    </LinearLayout>
</LinearLayout>